--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     </ul>
   
   </section>
-  
+  <footer>
+    <p>Contact me at <a href="mailto">gamingtime1606@gmail.com</a></p>
+  </footer>
 </body>
 
 </html>
