--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section> 
     <h3>Experience</h3>
     <h4>SuperMarket</h4>
-    <p>Cashier</p>
+    <p>Cashier 2020-present</p>
     <ul> 
       <li>Worked as a cashier in my summer break</li>
       <li>It helped me with my math and memorization </li>
